<resources>
    <string name="app_name">MosqueFinder</string>
    <string name="quote">"\“A busy life makes prayer harder,\n but prayer makes a busy life easier.\”"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="splash_title">Mosque Finder</string>
    <string name="splash_message">Find a mosque at all times</string>
    <string name="brought_you_by_shidtech">ShidApps</string>
    <string name="read_file">Reading File</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="toast_auth_salutation">Hi %1$s !\nYour account was successfully created.</string>
    <string name="toast_permission">Please accept Permissions</string>
    <string name="email_message">Send email to mosquefinder@gmail.com</string>
    <string name="toast_log_in_msg">You are logged in as: %1$s</string>
    <string name="toast_marker">Hold and drag the red marker to desired position. Tap marker to add mosque information</string>
    <string name="sneaker_connected">Connected!!</string>
    <string name="sneaker_msg_network">The network is back!!😁</string>
    <string name="sneaker_disconnected">Connection lost</string>
    <string name="sneaker_msg_network_lost">No Network!🧐</string>
    <string name="map_user">You</string>
    <string name="mosque_verified">verified</string>
    <string name="mosque_not_verified">not verified</string>
    <string name="search_hint">Search</string>
    <string name="home_bottom_dialog_title">Closest Mosque around you</string>
    <string name="mosque_name">Mosque Name:</string>
    <string name="share_text">Find a mosque wherever you are. Download MosqueFinder at
    https://cutt.ly/8vGgm54</string>
    <string name="share_app">Share App</string>
    <string name="send_mail">Send mail…</string>
    <string name="offline">Please activate Internet or refresh to use offline mode</string>
    <string name="title_dialog">Mosque Finder</string>
    <string name="dialog_prompt_location">Are you sure you want to add a mosque in this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_input_title">Enter the name of the mosque</string>
    <string name="dialog_save">Save Mosque</string>
    <string name="you">This is you</string>
    <string name="dialog_confirm">Confirm or Report location</string>
    <string name="confirm_mosque">Confirm Mosque</string>
    <string name="report_mosque">Report Mosque</string>
    <string name="dialog_msg_google_map">Show Directions in Google Map?</string>
    <string name="dialog_log_out">Are you sure you want to log out?</string>
    <string name="map_error">Download Google Map</string>
    <string name="refresh_map">Please check your Internet and refresh the map.</string>
    <string name="bubble1">See the closest Mosque around you</string>
    <string name="description1">By clicking the tiles, you will be able to see the position of the mosque.</string>
    <string name="bubble2">Menu Option</string>
    <string name="description2">By clicking this button, three options will be displayed,\n 1.Reset the map:\n \n
        -In case there is an Internet issue, you can refresh the map\n 2.Add a mosque:\n \n-Enables you to add a mosque on the map,
        to move to marker hold and drag, to confirm the position just press on the red marker. \n \n
        3.My position:\n \n-Relocates the camera to your position</string>
    <string name="bubble3">Search all Mosques</string>
    <string name="description3">You can search any mosque by clicking the search bar, the mosques
    are classified by distance related to your position</string>
    <string name="bubble4">Access Navigation Menu</string>
    <string name="description4">You can access the navigation menu by clicking this button or by
    swiping the screen from left to right. Additional features are available like motivational quotes
    and information on the most famous mosques. Check them out 😁</string>
    <string name="bubble">Welcome to Mosque Finder</string>
    <string name="dialog_rate_app">Thank you for using Mosque Finder. If you like it please rate us!</string>
    <string name="rate">Rate App</string>
    <string name="from_position">from your position</string>
    <string name="options_1">Reset Map</string>
    <string name="options_2">Add mosque</string>
    <string name="options_3">My position</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_hint_feedback">Write your feedback here</string>
    <string name="feedback_hint_email">Email</string>
    <string name="feedback_send_successful">Your feedback was sent. Thanks!</string>
    <string name="feedback_email_error">Please enter a valid email</string>
    <string name="feedback_feedback_error">Enter feedback</string>
    <string name="quote_islam">Quotes</string>
    <string name="beautiful_mosque">Most Beautiful Mosques</string>
    <string name="menu_share">Share app</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Sign out</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="title_activity_maps">Map</string>
    <string name="determine_route">Determine route to </string>
    <string name="km">km </string>
    <string name="position">from your position</string>
    <string name="km_test">%1$s km</string>
    <string name="duree">Duration: </string>
    <string name="trip">Trip # </string>
    <string name="title_activity_maps2">Map</string>
    <string name="open_google_map">Open Google Maps?</string>
    <string name="sign_out_button">sign out</string>
    <string name="default_error_message">An error occurred, please try again.</string>
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <string name="menu_quote">Inspirational Quotes</string>
    <string name="menu_detail">Detail on Mosque</string>
    <string name="onboarding_slide1_title">Welcome to Mosque Finder.</string>
    <string name="onboarding_slide1_subtitle">Find all nearby Mosque in your area. </string>
    <string name="onboarding_slide1_desc">Never miss a prayer while on the road.</string>
    <string name="onboarding_slide2_title">Mosques are verified by you and other users.</string>
    <string name="onboarding_slide2_subtitle">There are four types of Mosques. </string>
    <string name="onboarding_slide2_desc">Verified mosques (2 types), non verified, and mosques which position
    are inaccurate. </string>
    <string name="onboarding_slide3_title">See the mosque closest to you.</string>
    <string name="onboarding_slide3_subtitle">Mosque Finder.</string>
    <string name="onboarding_slide3_desc">Mosque Finder shows you the three closest mosque to you on the
    main screen.</string>
    <string name="onboarding_slide4_title">Get Mosque Direction.</string>
    <string name="onboarding_slide4_subtitle">Click on the Mosques.</string>
    <string name="onboarding_slide4_desc">By clicking on the mosque, you
        can have the direction to the mosque displayed via Google Map.</string>
    <string name="onboarding_slide5_title">Adding a mosque to the Map.</string>
    <string name="onboarding_slide5_subtitle">Contribute to the Community.</string>
    <string name="onboarding_slide5_desc">Not all mosques are on the map, you can contribute by
    adding your locals mosques that are not displayed on the map.</string>
    <string name="onboarding_slide6_title">Confirm or Report the position of Mosques</string>
    <string name="onboarding_slide6_subtitle">Help other users by confirming or reporting false
    location</string>
    <string name="onboarding_slide6_desc">By clicking on the mosque, you
        can confirm or report a location by following the menu.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="previous">previous</string>
    <string name="location_after_report">Thank you for reporting location.</string>
    <string name="location_already_report">You already reported this location. </string>
    <string name="location_already_confirm">You already made this action.</string>
    <string name="location_after_confirm">Thank you for confirming location.</string>
    <string name="mosque_not_added">Mosque has not been added check internet</string>
    <string name="mosque_added">Thank you! Please confirm the position or report in case of error.</string>
    <string name="marker_verified">(Verified)</string>
    <string name="marker_not_verified">(Not verified)</string>
    <string name="marker_false_position">(False position)</string>
    <string name="internet_ayah">You need Internet connection to play the Ayah</string>
    <string name="azkar">Azkar</string>
    <string name="_99_names_of_allah">99 Names of Allah</string>
    <string name="mosques">Mosques</string>
    <string name="find_nearby_mosques_in_your_area">Find Nearby Mosques in your area.</string>
    <string name="quran">Quran</string>
    <string name="get_to_know_the_99_names_of_allah">Get to know the 99 names of Allah</string>
    <string name="explore_and_learn_new_daily_azkhars">Explore and learn new daily azkhars</string>
    <string name="prayer_description">Check the time of Prayer in your area</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="quran_description">Read and Listen to the Holy Quran</string>
    <string name="beauty_mosque_home">Find and Explore the most beautiful mosque on the globe.</string>
    <string name="quotes_from_great_personalities">Quotes from great personalities</string>
    <string name="feedback_description">Give your feedback to improve Mosque Finder</string>
    <string name="channel_name" translatable="false">channel_name</string>
    <string name="channel_desc" translatable="false">channel_desc</string>
    <string name="play_surah">Play entire Surah</string>
    <string name="download_surah">Download Surah</string>
    <string name="dl_available">This Surah is already available offline</string>
    <string name="dl_started">Download started, check notification</string>
    <string name="find_nearby_mosque">Find Nearby Mosque</string>
    <string name="refresh">Refresh</string>
    <string name="activate_all_notification">Enable All</string>
    <string name="disactivate_all_notification">Disable All</string>
    <string name="next_prayer">Next Prayer:</string>
    <string name="translate_in_french">Translate in French</string>
    <string name="internet_msg">You need Internet to perform this action</string>
    <string name="chapter">Chapter</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="notification_title">Daily Ayah</string>
    <string name="notification_helper_title">New Content</string>
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">An Ayah is displayed daily.</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
</resources>