<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_quotes"
        android:icon="@drawable/ic_global"
        android:title="@string/quote_islam" />

    <item
        android:id="@+id/nav_mosques"
        android:icon="@drawable/ic_mosque"
        android:title="@string/beautiful_mosque" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_heart"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/nav_credits"
        android:icon="@drawable/ic_copyright"
        android:title="@string/menu_credits" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/menu_contact" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_exit" />
</menu>